added background color to header on smaller devices

--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
                 <div class="container container-right-about mt-5 mb-5">
                     <h2 class="motto text text-center h2">Sobre a J2K Imóveis</h2>
                     <p class="mx-5 text text center">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil quam ad! Optio consectetur nihil asperiores. Ut dicta magnam voluptatum at sequi? 
-                        Pariatur, repellat adipisci ducimus eos quisquam et voluptatibus suscipit quidem rerum! Eligendi, beatae!
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit optio, modi rerum amet incidunt numquam hic ipsa praesentium ullam quis? 
+                        Dicta odit facere sint sapiente illum mollitia minima blanditiis asperiores delectus adipisci praesentium maxime recusandae repudiandae, 
+                        consectetur voluptates nam soluta eum dolorum quidem?<br><br>    Exercitationem amet facere earum eaque cum consequatur repellat voluptates reprehenderit, 
+                        commodi sint et ullam, nisi, perspiciatis doloribus.
                     </p>
                 </div>
             </div>
