--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Lib/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script defer type="text/javascript" src="emailjs_init.js"></script>
+    <script defer type="text/javascript" src="emailjs.js"></script>
 </head>
 <body>
     <!--PAGE LOADER-->
     <div class="loader"></div>
+
+    <!--Custom Alert Box-->
+    <div id="customAlertBox" class="custom-alert">
+        <div class="custom-alert-content">
+            <span class="close">&times;</span>
+            <p id="alertMessage"></p>
+        </div>
+    </div>
 
     <!--NAVBAR ACTIVE LINK SPY-->
     <header id="header-nav">
@@ -49,11 +60,10 @@
         <main id="home" class="">
             <!--Left Content-->
             <div class="container banner d-sm-block d-md-block d-lg-flex">
-                <div class="container d-flex flex-column container-hero-left">
+                <div class="container d-flex flex-column container-hero-left animation-up">
                     <h2 class="motto mx-5 text h1">Encontre o seu <span><strong>Lar</strong></span>.</h2>
                     <p class="mx-5">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore sit voluptatibus libero numquam, quibusdam labore 
-                        laboriosam aut explicabo nobis ea molestiae eaque.
+                        Com a ajuda da J2K Imóveis você encontra o <strong>lar perfeito</strong> para atender todas as suas necessidades. Entre em contato com a J2K agora mesmo.
                     </p>
                     <button class="btn btn-hero btn-block shadow-sm mx-5"><a href="#contact" draggable="false">Comece agora</a></button>
                 </div>
@@ -73,8 +83,8 @@
                 </div>
                 <!--Right Content-->
                 <div class="container container-right-about mt-5 mb-5">
-                    <h2 class="motto text text-center h2">Sobre a J2K Imóveis</h2>
-                    <p class="mx-5 text text center">
+                    <h2 class="motto text text-center h2 animation-up">Sobre a J2K Imóveis</h2>
+                    <p class="mx-5 text text center animation-up">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit optio, modi rerum amet incidunt numquam hic ipsa praesentium ullam quis? 
                         Dicta odit facere sint sapiente illum mollitia minima blanditiis asperiores delectus adipisci praesentium maxime recusandae repudiandae, 
                         consectetur voluptates nam soluta eum dolorum quidem?<br><br>    Exercitationem amet facere earum eaque cum consequatur repellat voluptates reprehenderit, 
@@ -88,7 +98,7 @@
         <section id="contact" class="pb-5">
             <!--Left Content-->
             <div class="container banner d-sm-block d-md-block d-lg-flex">
-                <div class="container d-flex flex-column container-hero-left">
+                <div class="container d-flex flex-column container-hero-left animation-up">
                     <img src="/images/JK2_imoveis_logo.webp" alt="J2K Imóveis Logo" id="brand-logo-3" draggable="false" class="pb-1 mb-3">
                     <h2 class="motto mx-5 text text-center h2">Como podemos ajudá-lo?</h2>
                     <p class="mx-5 text text-center">
@@ -97,7 +107,7 @@
                 </div>
                 <!--Right Content-->
                 <div class="container mt-5">
-                    <form class="mx-0 form mx-auto" id="contact-form">
+                    <form class="mx-0 form mx-auto animation-down" id="contact-form">
                         <label for="user_name" class="form-label">
                             Nome:
                         </label>
@@ -176,19 +186,36 @@
 
         <!--FAQ SECTION-->
         <section id="faq" class="">
-            <div class="container banner d-block">
-                <h2 class="motto h2 text text-center">Perguntas Frequentes</h2>
-                <p class="text text-center pb-3">
+            <div class="container banner d-block animation-up">
+                <h2 class="motto h2 text text-center animation-down">Perguntas Frequentes</h2>
+                <p class="text text-center pb-3 animation-down">
                     Tem alguma dúvida? Veja as perguntas frequentes
                 </p>
                 <div class="accordion" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                            Quanto tempo leva para eu receber uma resposta?
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+                            Quanto serviços a J2K oferece?
                         </button>
                         </h2>
-                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                            <div class="accordion-body">
+                                A J2K presta os seguintes serviços:
+                                <ul>
+                                    <br>
+                                    <li>Venda de Imóveis</li>
+                                    <li>Consultoria Imobiliária</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                            Quanto tempo leva para eu receber um retorno da J2K?
+                        </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
                                 Nosssos consultores vão buscar pelas melhores opções no mercado de acordo com as informações especificadas.<br>
                                 O processo não costuma durar mais que <strong>2 dias</strong> até que você receba uma mensagem de retorno. 
@@ -196,46 +223,32 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                            Pergunta #2
-                        </button>
-                        </h2>
-                        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                            <div class="accordion-body">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatum vero id incidunt veritatis odio dignissimos cumque dolorum fugit at, 
-                                maiores velit neque possimus perspiciatis officiis dolorem adipisci excepturi repudiandae sint facere. Natus quam id odit incidunt nobis ratione amet.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                            Pergunta #3
+                            Posso procurar por qualquer tipo de imóvel?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, deleniti eveniet temporibus sed molestiae voluptatum.
+                                Sim. Nós da J2K realizamos toda a pesquisa para melhor atender ao seu gosto e exigências.
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                            Pergunta #4
+                            A J2K cuida de toda a parte da documentação?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro?
+                                Sim. A J2K é responsável por toda a parte legal do processo de compra do seu lar.
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
     </div>
 
     <!--FOOTER SECTION-->
@@ -332,6 +345,5 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> 
         <script src="./js plugins/jquery.mask.min.js"></script> <!--Plugin de máscara para validar telefones/email-->
         <script src="/script.js"></script>
-        <script type="text/javascript" src="./emailjs.js"> </script>
 </body>
 </html>
