--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <link rel="stylesheet" href="./Lib/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script defer type="text/javascript" src="emailjs_init.js"></script>
+    <script type="text/javascript">
+        (function() {
+        // https://dashboard.emailjs.com/admin/account
+        emailjs.init({
+            publicKey: "kGPFPWjqp-T9f7Dml", 
+            // privateKey: email_js_client_key,
+            });
+        })();
+    </script>
     <script defer type="text/javascript" src="emailjs.js"></script>
 </head>
 <body>
