added email js code

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Lib/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+
     <script type="text/javascript">
         (function() {
         // https://dashboard.emailjs.com/admin/account
         emailjs.init({
             publicKey: "kGPFPWjqp-T9f7Dml", 
-            // privateKey: email_js_client_key,
             });
         })();
     </script>
-    <script defer type="text/javascript" src="emailjs.js"></script>
+    <script type="text/javascript" src="emailjs.js"></script>
 </head>
 <body>
     <!--PAGE LOADER-->
