--- a/index.html
+++ b/index.html
@@ -106,11 +106,17 @@
         </section>
 
         <!--CONTACT SECTION-->
-        <section id="contact" class="pb-5">
+        <section id="contact" class="pb-5 pt-5">
+            <!--Section SVG Divider-->
+            <div class="custom-shape-divider-top-1727206401">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+                </svg>
+            </div>
             <!--Left Content-->
             <div class="container banner d-sm-block d-md-block d-lg-flex">
                 <div class="container d-flex flex-column container-hero-left animation-up">
-                    <img src="/images/JK2_imoveis_logo.webp" alt="J2K Imóveis Logo" id="brand-logo-3" draggable="false" class="pb-1 mb-3">
+                    <img src="/images/JK2_imoveis_logo.webp" alt="J2K Imóveis Logo" id="brand-logo-3" draggable="false" class="pb-1 mb-3 mt-5">
                     <h2 class="motto mx-5 text text-center h2">Como podemos ajudá-lo?</h2>
                     <p class="mx-5 text text-center">
                         Preencha o formulário com as informações de suas preferências, e aguarde o retorno de um de nossos consultores.
@@ -197,8 +203,14 @@
 
         <!--FAQ SECTION-->
         <section id="faq" class="">
+            <!--Section SVG Divider-->
+            <div class="custom-shape-divider-top-1727206977">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
             <div class="container banner d-block animation-up">
-                <h2 class="motto h2 text text-center animation-down">Perguntas Frequentes</h2>
+                <h2 class="motto h2 text text-center animation-down" id="faq-h2">Perguntas Frequentes</h2>
                 <p class="text text-center pb-3 animation-down">
                     Tem alguma dúvida? Veja as perguntas frequentes
                 </p>
