added proper values to options for EmailJS response message

--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
                             <label for="type" class="form-label">Qual a preferência de moradia?</label>
                             <select class="form-select" id="type" name="type" required>
                                 <option value="" class="disabled-opt" disabled selected>Selecione um tipo</option>
-                                <option value="house">Casa</option>
-                                <option value="apartment">Apartamento</option>
-                                <option value="community">Condomínio</option>
-                                <option value="any">Sem preferência</option>
+                                <option value="Casa">Casa</option>
+                                <option value="Apartmento">Apartamento</option>
+                                <option value="Condomínio">Condomínio</option>
+                                <option value="Sem Preferência">Sem preferência</option>
                             </select>
                         </div>
                         <div class="mb-3">
                             <label for="sqmeters" class="form-label">Até quantos M²?</label>
                             <select class="form-select" id="sqmeters" name="sqmeters" required>
                                 <option value="" class="disabled-opt" disabled selected>Selecione o M²</option>
-                                <option value="50">Menos de 50m²</option>
-                                <option value="120">Até 120m²</option>
-                                <option value="300">Até 300m²</option>
-                                <option value="300+">Mais de 300m²</option>
+                                <option value="Menos de 50">Menos de 50m²</option>
+                                <option value="Até 120">Até 120m²</option>
+                                <option value="Até 300">Até 300m²</option>
+                                <option value="Mais de 300">Mais de 300m²</option>
                             </select>
                         </div>
                         <div class="mb-3">
