--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-8Rf8hXJscZ3d3O7EZ5ayE4To7yZcmMX1w4cYFhnWnE7cDGa/yX+/G+WxfzL0X/NE" crossorigin="anonymous">
     <link rel="stylesheet" href="./Lib/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
@@ -76,7 +77,7 @@
                     <p class="mx-5">
                         Com a ajuda da J2K Imóveis você encontra o <strong>lar perfeito</strong> para atender todas as suas necessidades. Entre em contato com a J2K agora mesmo.
                     </p>
-                    <button class="btn btn-hero btn-block shadow-sm mx-5"><a href="#contact" draggable="false">Comece agora</a></button>
+                    <a href="#contact" draggable="false" class="btn-link"><button class="btn btn-hero btn-block shadow-sm mx-5">Comece agora</button></a>
                 </div>
                 <!--Right Content-->
                 <div class="container d-flex justify-content-center">
@@ -90,7 +91,7 @@
             <div class="container banner d-sm-block d-md-block d-lg-flex pt-5 pb-5">
                 <!--Left Content-->
                 <div class="container d-flex flex-column container-hero-left mt-5 mb-5">
-                    <img src="./images/about_left_img.png" draggable="false" alt="Empresário de terno" loading="lazy" class="img-about-left">
+                    <img src="./images/about_left_img.webp" draggable="false" alt="Empresário de terno" loading="lazy" class="img-about-left">
                 </div>
                 <!--Right Content-->
                 <div class="container container-right-about mt-5 mb-5">
@@ -302,9 +303,9 @@
                     </div>
                     <!--Section Column-->
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 footer-menu1">
-                        <h6 class="text-uppercase fw-bold mb-4">
+                        <p class="text-uppercase fw-bold mb-4">
                             MENU
-                        </h6>
+                        </p>
                         <p>
                             <a href="#home" class="text-reset">Home</a>
                         </p>
@@ -314,9 +315,9 @@
                     </div>
                     <!--Section Column-->
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
+                        <p class="text-uppercase fw-bold mb-4">
                         J2K Imóveis.ltda®
-                        </h6>
+                        </p>
                         <p>
                             CNPJ: 00.000.000/0001-00
                         </p>
@@ -328,7 +329,7 @@
                     <!--Section Column-->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!--Contact-->
-                        <h6 class="text-uppercase fw-bold mb-4">Contato</h6>
+                        <p class="text-uppercase fw-bold mb-4">Contato</p>
                         <p class="contact-footer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
@@ -363,6 +364,7 @@
     </footer>
 
         <!--Libraries-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/8H8H/3qkG2NYb39aU4k6I6K8UUMx3toI/UQZ4yb" crossorigin="anonymous"></script>
         <script src="./Lib/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script> <!--JQuery-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> 
