Indexing website for google

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             });
         })();
     </script>
+    <meta name="google-site-verification" content="oQMQfC4YzSCEsU-qQOcoEuGUlIq3It2imkWK8eHUus4"/> <!--Google Search Console verification for indexing-->
 </head>
 <body>
     <!--PAGE LOADER-->
