--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
             });
         })();
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKES0PQ8B"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-2YKES0PQ8B');
+    </script>
     <meta name="google-site-verification" content="oQMQfC4YzSCEsU-qQOcoEuGUlIq3It2imkWK8eHUus4"/> <!--Google Search Console verification for indexing-->
 </head>
+
 <body>
     <!--PAGE LOADER-->
     <div class="loader"></div>
