added metatag for image on google search

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="Site de busca, assessoria e consultoria destinada à compra de imóveis">
+    <meta property="og:image" content="https://j2kimoveis-do6vdq1il-jeans-projects-0d6de70d.vercel.app/images/J2K_imoveis_logo_full.webp" />
+    <meta property="og:image:width" content="505" />
+    <meta property="og:image:height" content="459" />
+
     <title>J2K - Encontre o Imóvel perfeito</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
