added metatags for google search engine

--- a/index.html
+++ b/index.html
@@ -19,6 +19,32 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "J2K Imóveis",
+            "url": "https://j2kimoveis.vercel.app/",
+            "logo": "https://j2kimoveis-do6vdq1il-jeans-projects-0d6de70d.vercel.app/images/J2K_imoveis_logo_full.webp",
+            "image": "https://j2kimoveis.vercel.app/images/family-background.webp",
+            "description": "Site de busca, assessoria e consultoria destinada à compra de imóveis",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": " ",
+                "addressLocality": "Curitiba",
+                "addressRegion": "Paraná",
+                "postalCode": " ",
+                "addressCountry": "BR"
+        },
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+55-42-00000-0000",
+                "contactType": "Customer Service"
+            }
+        }
+    </script>
+
     <script type="text/javascript">
         (function() {
         // https://dashboard.emailjs.com/admin/account
@@ -27,6 +53,7 @@
             });
         })();
     </script>
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKES0PQ8B"></script>
     <script>
