meta tags added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:image:height" content="459" />
 
     <title>J2K - Encontre o Imóvel perfeito</title>
+    <link rel="icon" href="./images/JK2_imoveis_logo.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
